[package]
name = "nustat-core"
version = "0.1.0"
edition = "2021"
authors = ["shellrow <shellrow@intsigma.com>"]
repository = "https://github.com/shellrow/nustat"
documentation = "https://github.com/shellrow/nustat"
readme = "README.md"
license = "MIT"
description = "Core library for nustat and nustat-desktop"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
default-net = { version = "0.21", features = ["serde"] }
xenet = { version = "0.5", features = ["serde"] }
netprobe = { version = "0.4", features = ["serde", "async"] }
tokio = { version = "1.35" }
hickory-resolver = { version = "0.24" }
futures = {version = "0.3"}
sysinfo = "0.29"
netstat2 = "0.9"
reqwest = { version="0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
chrono = { version = "0.4", features = ["serde"] }
ipnet = "2.5"
#regex = "1.6"
#rusqlite = { version = "0.30.0", features = ["bundled", "array"] }
home = "0.5"
bincode = "1.3"
rangemap = "1.4"
#nustat-db-ipv4 = { path = "../nustat-db/nustat-db-ipv4" }
#nustat-db-ipv6 = { path = "../nustat-db/nustat-db-ipv6" }
#nustat-db-as = { path = "../nustat-db/nustat-db-as" }
#nustat-db-country = { path = "../nustat-db/nustat-db-country" }
#nustat-db-service = { path = "../nustat-db/nustat-db-service" }

[[example]]
name = "parse_frame"
path = "examples/parse_frame.rs"

[[example]]
name = "perf"
path = "examples/perf.rs"

[[example]]
name = "socket_process"
path = "examples/socket_process.rs"
