[package]
name = "nustat"
version = "0.1.0"
edition = "2021"
authors = ["shellrow <shellrow@intsigma.com>"]
description = "Cross-platform network activity monitoring tool"
repository = "https://github.com/shellrow/nustat"
documentation = "https://github.com/shellrow/nustat"
readme = "README.md"
keywords = ["network","security","cross-platform"]
categories = ["network-programming"]
license = "MIT"

[[bin]]
name = "nustat"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
simplelog = "0.12"
default-net = { version = "0.21", features = ["serde"] }
tokio = { version = "1.35" }
clap = { version = "4.4", features = ["cargo"] }
crossterm = "0.27"
anyhow = "1.0"
argh = "0.1"
rand = "0.8"
color-eyre = "0.6"
palette = "0.7"
ratatui = "0.25"
indicatif = "0.16"
inquire = "0.6"
nustat-core = { path = "../nustat-core", version = "0.1.0" }
