[package]
name = "nustat-db-as"
version = "0.1.0"
edition = "2021"
authors = ["shellrow <shellrow@intsigma.com>"]
repository = "https://github.com/shellrow/nustat"
documentation = "https://github.com/shellrow/nustat"
readme = "README.md"
license = "MIT"
description = "Custom Autonomous System (AS) database crate for nustat, created using open data sources."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
home = "0.5"
