[package]
name = "nustat-desktop"
version = "0.1.0"
description = "NuStatDesktop"
authors = ["shellrow <shellrow@intsigma.com>"]
license = "MIT"
repository = "https://github.com/shellrow/nustat"
documentation = "https://github.com/shellrow/nustat"
edition = "2021"
keywords = ["network", "security", "gui", "cross-platform"]
categories = ["network-programming"]

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
default-net = { version = "0.21", features = ["serde"] }
xenet = { version = "0.4", features = ["serde"] }
nustat-core = { path = "../../nustat-core", version = "0.1.0" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
